All entries are dated according to merging into the code in dev brainc h. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.

2016-05-24 ruhllatio
	Fix: Revert concat cat query to INNER and add WHERE constraint to exclude parentid being NULL
2016-05-24 niel
	Fix: Typoes in Changelog.
	Fix: Error checking for fetching SQL versions.
2016-05-23 ruhllatio
	Chg: Improve RequestID query times (and update_releases thread performance) on larger databases
	Chg: Improve all Releases queries for larger databases by preserving join orders of smaller tables
2016-05-19 bart39
	Mrg: Proper CouchPotato implementation #2151 @DariusIII
2016-05-17 niel
	Chg: Remove autopatcher script functionality. Replace with message to use ./zed update nzedb.
2016-05-17 ruhllatio
	Mrg: Feature couchpotato #2148 @DariusIII
	Fix: Feature couchpotato should send IMDB ID from page request not release guid
2016-05-17 DariusIII
	Fix: Add artist - title display to Gamma music page. Fixes issue #2149
	Fix: Add back 'None' to themes selection list in profile edit, so admin selected theme is used
2016-05-16 bart39
	Fix: Buffer nzb creation fixes #2139.
2016-05-16 niel
	Fix: Profile edit included non theme names in its dropdown list.
2016-05-16 ruhllatio
	Mrg: PR from Meganomic, Req Feature: Search Movies #1581 #2125
	Chg: Clean up NZB class file indents and query strings
	Fix: NZBImport now sets the nzb_guid during the import
2016-05-13 ruhllatio
	Fix: PostProcess Additional tmux query not accurate with PP add queue
2016-05-12 niel
	Add: Reporting output for update git, db commands.
2016-05-12 ruhllatio
	Fix: Browse ordering wrong due to added minSize push
	Mrg: PR Add leftguid column to releases to improve threading work queries #2144
	Chg: Improve fixRelNames work queries
2016-05-12 DariusIII
	* Fix: Remove derefferer links from CouchPotato url in Gamma theme.
2016-05-11 bart39
	Fix: fix patch 438 / schema.