@@ -189,8 +189,8 @@
 						{if $result.reid > 0}
 						<span class="mediainfo badge badge-inverse halffade" title="{$result.guid}">Media</span>
 						{/if}
-						{if $result.preid > 0}
-						<span class="preinfo badge badge-inverse halffade" title="{$result.preid}">PreDB</span>
+						{if $result.predb_id > 0}
+						<span class="preinfo badge badge-inverse halffade" title="{$result.predb_id}">PreDB</span>
 						{/if}
 							{if !empty($result.failed)}
 								<span class="badge badge-inverse"><i class ="fa fa-thumbs-o-up"></i> {$result.grabs} Grab{if $result.grabs != 1}s{/if} / <i class ="fa fa-thumbs-o-down"></i> {$result.failed} Failed Download{if $result.failed != 1}s{/if}</span>
